# jinx

./: .gitignore  .oracle-man  Cargo.toml  KNOWN_DIVERGENCES.md  README.md
bench/: COMPUTE.md  REPORT.md  STRENGTHS.md  compute-fib.nix  compute-fold.nix  compute-nqueens.nix  compute-primes.nix  compute-records.nix  compute-sort.nix  deep-force-recursive.nix  fib.nix  generic-closure.nix  ops.nix  pgo-build.sh  plot-parity-benchmarks.py  plot.py  run-benchmarks.sh  run-compute-benchmarks.sh  run-eval-strengths.sh  run-parity-benchmarks.sh  search-workload.nix
bench/results/: fib.json  firefox.json  gcstats-firefox.txt  gcstats-hello.txt  gcstats-iso.txt  hello.json  iso.json  metadata.txt  ops.json  parallel-gc.json  parse.json  rss.txt
bench/results/optimization-2026-07-10/: candidates.csv  final-integrated.csv
crates/jinx-cli/: Cargo.toml
crates/jinx-cli/src/: eval_cache.rs  main.rs  search.rs
crates/jinx-cli/tests/: equivalent_flake_inputs.rs
crates/jinx-conformance/: Cargo.toml
crates/jinx-conformance/src/: main.rs
crates/jinx-eval/: Cargo.toml
crates/jinx-eval/src/: builtins.rs  call-flake.nix  chunk.rs  compile.rs  context.rs  error.rs  flake.rs  heap.rs  immortal.rs  jit.rs  jit_rt.rs  json.rs  lib.rs  mem.rs  print.rs  regex.rs  stack.rs  sym.rs  value.rs  vm.rs  xml.rs
crates/jinx-eval/tests/: eval.rs  flake.rs
crates/jinx-fetch/: Cargo.toml
crates/jinx-fetch/src/: attrs.rs  cache.rs  fetchers.rs  lib.rs  path.rs  url.rs
crates/jinx-fetch/tests/: cache.rs  fetch.rs
crates/jinx-flake/: Cargo.toml
crates/jinx-flake/src/: flakeref.rs  lib.rs  lockfile.rs  registry.rs
crates/jinx-flake/tests/: flakeref.rs  lockfile.rs  registry.rs
crates/jinx-flake/tests/fixtures/: registry.json
crates/jinx-flake/tests/fixtures/composite/: flake.nix
crates/jinx-flake/tests/fixtures/composite/child/: flake.nix
crates/jinx-flake/tests/fixtures/equivalent-inputs/: flake.nix
crates/jinx-flake/tests/fixtures/equivalent-inputs/common/: flake.nix
crates/jinx-jit/: Cargo.toml
crates/jinx-jit/src/: codegen.rs  lib.rs  rt.rs
crates/jinx-store/: Cargo.toml
crates/jinx-store/src/: daemon.rs  derivation.rs  escape_scan.rs  hash.rs  lib.rs  nar.rs  nar_stats.rs  nix32.rs  store_path.rs  wire.rs
crates/jinx-store/tests/: daemon.rs  golden_derivation.rs  golden_hash.rs  golden_nar.rs  golden_store_path.rs  wire.rs
crates/jinx-store/tests/fixtures/: nartree.nar
crates/jinx-syntax/: Cargo.toml
crates/jinx-syntax/src/: ast.rs  bind.rs  error.rs  lexer.rs  lib.rs  parser.rs  pos.rs  show.rs  symbol.rs
crates/jinx-syntax/tests/: lexer_parser.rs
tools/: difffuzz.py
