[workspace]
resolver = "2"
members = [
    "crates/jinx-syntax",
    "crates/jinx-eval",
    "crates/jinx-jit",
    "crates/jinx-store",
    "crates/jinx-fetch",
    "crates/jinx-flake",
    "crates/jinx-cli",
    "crates/jinx-conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"

[workspace.dependencies]
jinx-syntax = { path = "crates/jinx-syntax" }
jinx-eval = { path = "crates/jinx-eval" }
jinx-jit = { path = "crates/jinx-jit" }
jinx-store = { path = "crates/jinx-store" }
jinx-fetch = { path = "crates/jinx-fetch" }
jinx-flake = { path = "crates/jinx-flake" }

bstr = "1"
rustc-hash = "2"
sha2 = { version = "0.10", features = ["asm"] }
sha1 = "0.10"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
rayon = "1"
crossbeam-deque = "0.8"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-frontend = "0.116"
cranelift-codegen = "0.116"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench-fast]
inherits = "release"
lto = false
codegen-units = 16
