[package]
name = "jinx-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jinx-syntax.workspace = true
jinx-store.workspace = true
jinx-fetch.workspace = true
jinx-flake.workspace = true
bstr.workspace = true
rustc-hash.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
libc.workspace = true
