[package]
name = "jinx-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jinx-syntax.workspace = true
jinx-store.workspace = true
jinx-fetch.workspace = true
jinx-flake.workspace = true
bstr.workspace = true
rustc-hash.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
# arbitrary_precision preserves the raw number token so `fromJSON` can match
# nlohmann's integer-vs-float classification (e.g. `-0` is an int, `-0.0` a
# float) instead of serde's lossy `-0` -> f64 collapse.
serde_json = { workspace = true, features = ["arbitrary_precision"] }
toml.workspace = true
regex.workspace = true
libc.workspace = true
